adding more notebooks

--- a/code/Position/plot_Fig1.ipynb
+++ b/code/Position/plot_Fig1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:93d13f05453d83c4f31d9df2d84b62ed26c91e2e38ef5208f8be055953bd2c68"
+  "signature": "sha256:1cb5f82f33e53003e2948b4dd42e638413e13466c6d303472ece90dad5de9759"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1512,35 +1512,11 @@
      "outputs": []
     },
     {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {},
-     "source": [
-      "plot the scalebar"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Everything looks consistent :D"
+      "Everything looks consistent"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
