make sure comments are up to date

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -717,8 +717,12 @@ respectively. These locations correspond to a projected separation of 0.63 Mpc
 \label{sec:positionprior}
 
 \section{RESULTS} 
-We present the full outputs in Table~\ref{tab:outputs} and in figures in
-Appendix~\ref{app:results}, while we summarize the key numbers here.
+We present an
+overview of all the estimated variables in Table~\ref{tab:outputs}, with
+results only applying the default weights on the left hand side of the table
+and those also applied with the polarization weight on the right hand side.
+Furthermore, we include the plots of all the marginalized PDFs with the
+polarization weight in Appendix~\ref{app:results}. \par
 We found that the two subclusters collided with a relative velocity of $2400\pm^{900}_{400}~\kilo\meter~\second^{-1}$, at an estimated projection
 angle of $\alpha = 21\degree\pm^{9}_{11}$. From our analysis of the two
 scenarios, we found that El Gordo is more likely to be observed at a returning
@@ -734,23 +738,6 @@ $940\pm^{860}_{580}~\kilo\meter~\second^{-1}$. (See Fig.~\ref{fig:TSP_v3D})
 This fits comfortably within the upper limit of $2500
 \pm^{400}_{300}\kilo\meter~\second^{-1}$ reported by \cite{L13},
 which was obtained by making use of the Mach number of the NW radio relic.
-\par
-We present an
-overview of all the estimated variables in Table~\ref{tab:outputs}, with
-results only applying the default weights on the left hand side of the table
-and those also applied with the polarization weight on the right hand side.
-Furthermore, we include the plots of all the marginalized PDFs with the
-polarization weight in Appendix~\ref{app:results}. 
-
-%From the simulation of the Bullet Cluster, Springel \& Farrar (2007) showed
-%that pre-shock gas could travel at as high as $\sim1100~\kilo\meter~\second^{-1}$ from the outer edge of the subclusters to
-%the merger center.  It is therefore reasonable to assume the reported speed
-%from \cite{L13} to be an estimate of the upper bound of the observed speed of the NW
-%subcluster {\it relative to the center-of-mass}.
-%The magnitude of the relative $v_{3D}$ of the subclusters dropped as the
-%subclusters climbed out of their mutual gravitational potential, and
-%reduced to $v_{3D}(t_{obs}) = 940 \pm ^{860}_{580}~\kilo\meter~\second^{-1}$ at
-%the time of observation.
 
 \subsection{Time-since-pericenter (TSP) and the merger scenario}
 \label{sec:merger_scenario}
@@ -1103,7 +1090,7 @@ We would also like to thank
 GitHub for providing free repository for version control for our data and
 analyses. This research made use of APLpy, an open-source plotting package for Python
 hosted at http://aplpy.github.com; Astropy, a community-developed core
-Python package for Astronomy \citep{astropy}, AstroML, a
+Python package for Astronomy \citep{astropy}, AstroM{https://github.com/karenyyng/ElGordo_paper1}L, a
 machine learning library for astrophysics \citep{VanderPlas2012}, and IPython, a system for
 interactive scientific computing, computing in science and engineering
 \citep{Perez2007}.\par
