--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -1148,7 +1148,8 @@ machine learning library for astrophysics \citep{VanderPlas2012}, and IPython, a
 interactive scientific computing, computing in science and engineering
 \citep{Perez2007}.\par
 Note: The authors have made the Python code for most of the analyses openly
-available at \href{https://github.com/karenyyng/ElGordo\_paper1}{https://github.com/karenyyng/ElGordo_paper1}. 
+available at
+\href{https://github.com/karenyyng/ElGordo\_paper1}{https://github.com/karenyyng/ElGordo\_paper1}. 
 
 \bibliographystyle{mn2e}
 \bibliography{ElGordo1}
