fixed silly .bib and tag issues

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -20,7 +20,6 @@
 \graphicspath{{graphics/}}
 \newcommand{\mc}[1]{\multicolumn{1}{c}{#1}} % handy shortcut macro
 %-----------------------------------------------------------------------
-%\input{bib_alias.tex}
 \defcitealias{D13}{D13}
 \defcitealias{Jee13}{J13}
 \defcitealias{M12}{M12}
@@ -492,7 +491,6 @@ the apocenter and the 3D separation of the subclusters at observation
 ($d_{3D}$). 
 \subsection{Design and application of weights} 
 \label{sec:priors}
-%\input{2.3_prior}
 One of the strengths of the Monte Carlo simulation by
 \citetalias{D13} is its ability to detect and rule out extreme input values that would result in
 unphysical realizations via the application of weights. 
@@ -505,7 +503,6 @@ based on the polarization fraction of the radio relic.
 
 \subsubsection{Monte Carlo weights based on the polarization fraction of the radio relic}
 \label{subsubsec:polar_frac}
-%\input{2.3_1_polarization_prior}
 
 We can relate the polarization fraction of the radio relic to the
 projection angle by examining the
@@ -599,7 +596,6 @@ otherwise stated, the main results of the paper are obtained after applying
 this polarization weight in addition to the default weights.
 
 %%---------------------------------------------------------------------------
-%\input{output_table.tex}
 
 \subsection{Extension to the Monte Carlo simulation - Determining merger
 scenario with radio relic position by model comparison}
@@ -633,7 +629,7 @@ Polarization fraction of NW relic ($\langle P_{strong} \rangle$) & 33\% &  &
 \hline 
 \end{tabular} 
 \end{center} 
-\label{tab:inputs} 
+\label{tab:input_contraints} 
 \end{minipage}
 \end{table*} 
 
@@ -868,7 +864,6 @@ section 3.4.
 	\label{fig:our_guessed_scenario1}
 \end{figure}
 \subsection{Sensitivity analysis of the polarization weight}
-%\input{3.3_sens_analysis}
 \label{sec:sensitivityTests}
 We performed tests of how the output variables vary according to the
 choice of the cutoff of the polarization weight between
@@ -1307,7 +1302,6 @@ different velocities.}
 
 \section{COMPARISON OF THE OUTGOING AND RETURNING SCENARIO}
 \label{app:Bayes_factor}
-%\input{supplement}
 Here, we compare the different merger scenarios using the two relics
 independently and show that they consistently give the conclusion that the returning
 scenario is favored for the plausible range of $\beta$. For each merger
